--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@ionic/react": "^8.3.2",
     "express": "^4.21.0",
     "firebase": "^10.14.0",
