--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@ionic/react": "^8.3.2",
+    "@tanstack/react-query": "^5.59.15",
     "express": "^4.21.0",
     "firebase": "^10.14.0",
     "firebase-admin": "^12.6.0",
