--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@ionic/react": "^8.3.2",
-    "@tanstack/react-query": "^5.59.15",
+    "@tanstack/react-query": "^5.73.3",
     "express": "^4.21.0",
     "firebase": "^10.14.0",
     "firebase-admin": "^12.6.0",
+    "framer-motion": "^12.6.5",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
