--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ionic/react": "^8.3.2",
     "@sendgrid/mail": "^8.1.5",
     "@tanstack/react-query": "^5.73.3",
+    "dompurify": "^3.2.5",
     "express": "^4.21.0",
     "firebase": "^10.14.0",
     "firebase-admin": "^12.6.0",
@@ -25,6 +26,7 @@
     "react-icons": "^5.3.0",
     "react-image-file-resizer": "^0.4.8",
     "react-query": "^3.39.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
